--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-audio-play-controls",
-  "version": "0.1.3",
+  "version": "0.1.2",
   "private": false,
   "description": "audio player component for Vue.js",
   "main": "dist/vue-audio-play-controls.common.js",
@@ -11,6 +11,7 @@
     "build": "vue-cli-service build --dest docs",
     "build-bundle": "vue-cli-service build --target lib --name vue-audio-play-controls ./src/main-bundle.js",
     "lint": "vue-cli-service lint",
+    "publish-patch": "npm version patch && git push origin --tags && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1",
     "precommit": "lint"
   },
