--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "vue-cli-service build --dest docs",
     "build-bundle": "vue-cli-service build --target lib --name vue-audio-play-controls ./src/main-bundle.js",
     "lint": "vue-cli-service lint",
-    "publish-patch": "npm version patch && git push origin --tags && npm publish",
+    "publish-patch": "yarn build-bundle && npm version patch && yarn publish-git",
+    "publish-git": "git push origin --tags",
+    "publish": "yarn publish",
     "test": "echo \"Error: no test specified\" && exit 1",
     "precommit": "lint"
   },
