--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "vue-cli-service lint",
     "publish-patch": "yarn build-bundle && npm version patch && yarn publish-git",
     "publish-git": "git push origin --tags",
-    "publish": "yarn publish",
+    "publish": "npm publish",
     "test": "echo \"Error: no test specified\" && exit 1",
     "precommit": "lint"
   },
