--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build --dest docs",
     "build-bundle": "vue-cli-service build --target lib --name vue-audio-play-controls ./src/main-bundle.js",
+    "build-component": "vue-cli-service build --target wc --name audio-play-controls ./src/main-bundle.js",
     "lint": "vue-cli-service lint",
     "publish-patch": "yarn build-bundle && npm version patch && yarn publish-git",
     "publish-git": "git push origin --tags",
