--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-audio-play-controls",
   "version": "0.1.12",
   "private": false,
-  "description": "audio player component for Vue.js",
+  "description": "audio play controls component for Vue.js",
   "main": "dist/vue-audio-play-controls.common.js",
   "unpkg": "dist/vue-audio-play-controls.umd.min.js",
   "jsdelivr": "dist/vue-audio-play-controls.umd.min.js",
